--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
@@ -274,7 +274,7 @@
   color: #ffffff;
 }
 
-.astra-popover-tabs .components-tab-panel__tabs button.components-tab-panel__tabs-item.active-tab:not(.is-primary):not(.is-tertiary):not(.is-link):hover {
+.astra-popover-color .astra-popover-tabs .components-tab-panel__tabs button.components-tab-panel__tabs-item.active-tab:not(.is-primary):not(.is-tertiary):not(.is-link):hover {
   color: #fff;
 }
 
